# iNOBEngine

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: count_loc.yml  tests.yml
examples/AsteroidAvoidanceGame/: main.cpp
examples/AsteroidAvoidanceGame/game/: animationClips.clips  camera.prfb  game.scene  high_score.scene  label.prfb  menu.scene  ui.html
examples/AsteroidAvoidanceGame/game/asteroids/: asteroid.lua  asteroid1_explosion.aseprite  asteroid2_explosion.aseprite  big_asteroid.prfb  small_asteroid.prfb
examples/AsteroidAvoidanceGame/game/background/: background.prfb  scrollingBackground.lua
examples/AsteroidAvoidanceGame/game/manager/: game.css  game.html  game.js  manager.lua  manager.prfb
examples/AsteroidAvoidanceGame/game/manager/ui/: pausedlabel.lua  testbutton.lua  ui.prfb
examples/AsteroidAvoidanceGame/game/menu/: menu.css  menu.html  menu.js  menu.lua  startbutton.lua
examples/AsteroidAvoidanceGame/game/ship/: bullet.lua  bullet.prfb  ship.lua  ship.prfb  testscript.lua
examples/AsteroidAvoidanceGame/game/testbutton/: testbutton.lua  testbutton.prfb
examples/AsteroidAvoidanceGame/game/ui/: testbutton.lua  ui.prfb
examples/AsteroidAvoidanceGame/src/: main.cpp
examples/AsteroidAvoidanceGame/src/components/: points.cpp  points.h
examples/Pathfinding/game/: animationClips.clips  camera.lua  pathfinding.scene
examples/Pathfinding/src/: main.cpp
src/: eventmanager.cpp  eventmanager.h  iNOBEngine.h  main.cpp  manager.cpp  manager.h
src/Box2D/: LICENCE
src/io/: fileutils.cpp  fileutils.h  luaimplementation.cpp  luaimplementation.h  resources.cpp  resources.h  scene.cpp  scene.h  settings.cpp  settings.h  sound.cpp  sound.h  texture.cpp  texture.h
src/types/: collisiondebugdraw.cpp  collisiondebugdraw.h  component.cpp  component.h  enginetypes.h  gameobject.cpp  gameobject.h  jsontypes.cpp  jsontypes.h  script.cpp  script.h  systemprogram.cpp  systemprogram.h  vectors.cpp  vectors.h
src/types/components/: animation.cpp  animation.h  camera.cpp  camera.h  collision.cpp  collision.h  input.cpp  input.h  scriptcomponent.cpp  scriptcomponent.h  testcomponent.cpp  testcomponent.h  transform.cpp  transform.h  uicomponent.cpp  uicomponent.h
src/types/systems/: animationsystem.cpp  animationsystem.h  collisionsystem.cpp  collisionsystem.h  inputsystem.cpp  inputsystem.h  rendersystem.cpp  rendersystem.h  scriptsystem.cpp  testsystem.cpp  testsystem.h
src/window/: window.cpp  window.h
src/window/cef/: cef_manager.cpp  cef_manager.h  guiapp.cpp  guiapp.h  guibrowserclient.cpp  guibrowserclient.h  guirenderhandler.cpp  guirenderhandler.h  guiv8handler.cpp  guiv8handler.h
src/window/imgui/: imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
tests/: ComponentTests.cpp  EventManagerTests.cpp  FileUtilsTests.cpp  GameObjectTests.cpp  JSONTest.cpp  LuaTests.cpp  ManagerTests.cpp  MiscTests.cpp  ResourceTests.cpp  SystemTest.cpp  TransformComponentTests.cpp  main.cpp
tests/systems/: RenderSystemTest.cpp  TestSystemTest.cpp
